# FluentPySide

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.kilo/plans/: 1775660680700-mighty-wizard.md
FluentWinUI3/: README.txt
FluentWinUI3/FluentWinUI3/: Calendar.qml  Dial.qml  Fluent.qml  ItemDelegate.qml  Label.qml  MenuBarItem.qml  MenuItem.qml  NavigationView.qml  Pane.qml  ScrollBar.qml  ScrollView.qml  SplitView.qml  SwitchDelegate.qml  ToolButton.qml  Tumbler.qml  qmldir
examples/: NavigationView.qml  ScrollBar.qml  TopNavigationView.qml  demo.py  example_app.py  gallery.qml  run_gallery.py
examples/FluentTheme/: FluentTheme.qml  qmldir
examples/gallery/: .gitignore  config.py  gallery.py  gallery.qml
examples/gallery/assets/: ItemData.qml  gallery.icns  qmldir
examples/gallery/components/: ControlClip.qml  ControlPage.qml  ControlShowcase.qml  LinkClip.qml  SamplePage.qml  qmldir
examples/gallery/languages/: en_US.ts  zh_CN.qm  zh_CN.ts
examples/gallery/pages/: AllSamples.qml  BasicInput.qml  Collections.qml  DateAndTime.qml  (+11 more)
examples/pages/: Home.qml  Iconography.qml  Settings.qml
fluentpyside/: __init__.py  _config.py  _frameless.py  _installer.py  _launcher.py  _loader.py  _mica.py  _theme.py  _translator.py  _window.py
fluentpyside.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fluentpyside/FluentControls/: AutoSuggestBox.qml  Avatar.qml  Base.qml  BusyIndicator.qml  CalendarView.qml  ColorPicker.qml  CtrlBtn.qml  DatePicker.qml  DropDownButton.qml  ErrorPage.qml  Expander.qml  FloatLayer.qml  Fluent.qml  FluentDialog.qml  FluentFrame.qml  FluentPage.qml  FluentSystemIcons-Index.js  FluentTextArea.qml  FluentWindow.qml  FluentWindowBase.qml  Flyout.qml  FocusIndicator.qml  Hyperlink.qml  Icon.qml  Indicator.qml  InfoBadge.qml  InfoBar.qml  NavigationBar.qml  NavigationItem.qml  NavigationSubItem.qml  NavigationView.qml  PillButton.qml  Position.qml  ProgressRing.qml  ScrollBar.qml  ScrollView.qml  Segmented.qml  SegmentedItem.qml  SelectorBar.qml  SelectorBarItem.qml  (+9 more)
fluentpyside/FluentPySide/: qmldir
fluentpyside/fluent_winui3/: Button.qml  CheckDelegate.qml  Dialog.qml  Drawer.qml  Fluent.qml  NavigationView.qml  RadioDelegate.qml  RoundButton.qml  ScrollView.qml  StackView.qml  SwipeDelegate.qml  SwipeView.qml  TabButton.qml  TextArea.qml  TreeView.qml  qmldir
tests/: smoke_test.py
tools/: inspect_imports.py  update_theme.py
(+93 files in other folders)
