[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluentpyside"
version = "0.1.1"
description = "Fluent WinUI3 QML style helper for PySide6 (copies assets from local PySide6 install)"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "lousybook", email = "lousybook94@gmail.com" } ]
dependencies = ["PySide6>=6.6"]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/notlousybook/FluentPySide"
Repository = "https://github.com/notlousybook/FluentPySide"
PyPI = "https://pypi.org/project/fluentpyside/"

[tool.setuptools.package-data]
# include the package-local fluent_winui3 folder files so they are part of the wheel/sdist
"fluentpyside" = ["fluent_winui3/**/*"]
