[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluentpyside"
version = "0.2.1"
description = "FluentWinUI3 QML style for PySide6 — one-liner to add the Fluent theme"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "lousybook", email = "lousybook94@gmail.com" } ]
dependencies = ["PySide6_Essentials>=6.6"]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/notlousybook/FluentPySide"
Repository = "https://github.com/notlousybook/FluentPySide"
PyPI = "https://pypi.org/project/fluentpyside/"

[tool.setuptools.package-data]
"fluentpyside" = ["fluent_winui3/**/*"]
"FluentWinUI3" = ["**/*"]
