[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluentpyside"
version = "0.2.1"
description = "Fluent Design UI for PySide6, featuring a complete Rin-UI component set"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "lousybook", email = "lousybook94@gmail.com" } ]
dependencies = ["PySide6_Essentials>=6.6", "darkdetect>=0.8"]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/notlousybook/FluentPySide"
Repository = "https://github.com/notlousybook/FluentPySide"
PyPI = "https://pypi.org/project/fluentpyside/"

[tool.setuptools.package-data]
"fluentpyside" = ["fluent_winui3/**/*", "FluentPySide/**/*"]
"FluentWinUI3" = ["**/*"]
